# safe-finetuning-api

./: .gitignore  README.md  init_env.sh  pyproject.toml  replicate_results.sh
src/: .ft-robustness  __init__.py
src/automated_cmft/: create_all_ciphers.sh  default_config.yaml  multiconfig.yaml  pipeline.py  qlora-fsdp-31-70b.yaml
src/baselines/: .gitignore  README.md  analyze_judgments.py  analyze_prompt_judgments.py  cache.py  config.py  create_baselines.sh  data.py  ensemble.py  evaluate_judgments.py  evaluate_prompts.py  evaluate_responses_strongreject.py  fine_tunes.py  ft_types.py  generate_outputs.py  judgment_utils.py  prompts.py  serve_models.py  utils.py  visualize_judgments.py
src/benign_ft/: .gitignore  convert_lima.py  convert_protein.py  create_benign_ft.sh  lima-fsdp-31-70b.yaml  load-pure-dove.py  load_oasst.py  long-protein-fsdp-31-70b.yaml  oasst2-fsdp-31-70b.yaml  platypus-fsdp-31-70b.yaml  protein-fsdp-31-70b.yaml  pure-dove-fsdp-31-70b.yaml
src/ciphers/: __init__.py  acrosticcipher.py  asciicipher.py  autokeycipher.py  cachedcipher.py  end_speak_cipher.py  identitycipher.py  keyedpolybiuscipher.py  serdes.py  simplersacipher.py  type.py  walnutsubstitutioncipher.py
src/data/: harmful-identity-wei.jsonl
src/data_preparation/: generate_probe_datasets.py
src/feature_extraction/: configurations.py  data_loading.py  data_loading_with_cipher.py  ensure_benign_ft_collected.py  ensure_cmft_ft_collected.py  feature_extraction.py  intkeysorteddict.py  type.py  utility.py  utils.py
src/ft_robustness/: __init__.py
src/old_harness/: __init__.py  (+4 more)
(+11 files in other folders)
