[project]
name = "ft-robustness"
readme = "README.md"
requires-python = ">=3.11, <3.13"
version = "0.1.0"
description = "Tools for evaluating and improving the robustness of fine-tuned language models"
dependencies = [
  # Core data science
  "numpy>=1.21.0",
  "pandas>=1.5.0",
  "scikit-learn>=1.0.0",
  # data source
  "kaggle>=1.6.0",
  # Deep learning
  "torch>=2.5.1",
  "transformers>=4.30.0",
  "datasets>=2.10.0",
  # LLM APIs and inference
  "openai>=1.0.0",
  "litellm>=0.1.4",
  "anthropic>=0.5.0",
  # Async and networking
  "aiohttp>=3.8.0",
  "asyncio>=3.4.3",
  # Data validation and serialization
  "pydantic>=2.0.0",
  "dill>=0.3.6",
  # Configuration
  "hydra-core>=1.3.2",
  "pyyaml>=6.0",
  # Utilities
  "tqdm>=4.65.0",
  "pathvalidate>=3.2.1",
  # Visualization
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  # serving
  "vllm>=0.7",
  # training
  "axolotl[flash-attn,deepspeed]>=0.7.0",
  "wandb>=0.15.0",
  "async-lru>=2.0.4",
]

[build-system]
requires = ["setuptools>=68.0", "wheel", "torch>=2.5.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ft_robustness", "ciphers", "automated_cmft", "feature_extraction", "baselines", "old_harness"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
implicit_reexport = true

[tool.uv]
prerelease = "allow"
